--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="airline_item_padding">10dp</dimen>
     <dimen name="dmGateSize">70dp</dimen>
     <dimen name="dmTerminalSize">50dp</dimen>
+    <dimen name="flight_item_image_margin">70dp</dimen>
 </resources>
