--- a/app/src/main/res/layout/fragment_parent_card.xml
+++ b/app/src/main/res/layout/fragment_parent_card.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:animateLayoutChanges="true">
+    android:animateLayoutChanges="true"
+    style="@style/ExotikosCardHeaderBar">
 
 
     <TextView
@@ -42,7 +43,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvCardName"
-        android:padding="@dimen/card_header_padding"
+
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
@@ -50,7 +51,9 @@
         app:ael_expanded="false"
         app:ael_duration="300"
         app:ael_interpolator="accelerate"
-        app:ael_orientation="vertical">
+        app:ael_orientation="vertical"
+        android:background="@color/secondary_light">
+
 
         <!-- The content of the expanded card should be here -->
         <FrameLayout
