--- a/app/src/main/res/layout/fragment_travel_prep.xml
+++ b/app/src/main/res/layout/fragment_travel_prep.xml
@@ -119,7 +119,8 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_marginTop="25dp"
-            android:layout_marginLeft="@dimen/fragment_horizontal_margin"/>
+            android:paddingLeft="@dimen/fragment_horizontal_margin"
+            android:background="@color/primary"/>
 
         <TextView
             tools:text="Boarding in 32 Days"
@@ -130,8 +131,9 @@
             android:layout_below="@+id/tvCheckinDaysLeft"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="@dimen/fragment_horizontal_margin"
-            android:layout_marginLeft="@dimen/fragment_horizontal_margin"/>
+            android:layout_marginBottom="@dimen/fragment_horizontal_margin"
+            android:paddingLeft="@dimen/fragment_horizontal_margin"
+            android:background="@color/primary"/>
 
         <Button
             android:background="@drawable/google_maps"
