accent color icons, consistent spacing and color of background of cards

--- a/app/src/main/res/layout/activity_security_process.xml
+++ b/app/src/main/res/layout/activity_security_process.xml
@@ -9,7 +9,9 @@
         app:pstsShouldExpand="true"
         app:pstsTextAllCaps="true"
         android:layout_width="match_parent"
-        android:layout_height="48dp" />
+        android:layout_height="48dp"
+        app:pstsDividerColor="@color/accent"
+        app:pstsIndicatorColor="@color/colorAccent"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/vpPager"
