--- a/app/src/main/res/layout/fragment_baggage_help.xml
+++ b/app/src/main/res/layout/fragment_baggage_help.xml
@@ -11,12 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
+        android:textColor="@color/primary_text"
         android:id="@+id/textView3" />
-    <TextView
-        android:text="For more information click"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView4" />
 
     <ImageView
         android:layout_width="match_parent"
