--- a/app/src/main/res/layout/fragment_security_checkin.xml
+++ b/app/src/main/res/layout/fragment_security_checkin.xml
@@ -5,8 +5,7 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:weightSum="1"
-        android:background="@color/twitter_mild_grey">
+        android:weightSum="1">
 
         <CheckedTextView
             android:text="@string/idString"
@@ -101,6 +100,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_gravity="right"
+            android:layout_marginBottom="@dimen/fragment_horizontal_margin"
             android:id="@+id/btnNext" />
     </LinearLayout>
 
