--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,7 @@
     <dimen name="dmGateSize">70dp</dimen>
     <dimen name="dmTerminalSize">50dp</dimen>
     <dimen name="flight_item_image_margin">70dp</dimen>
+
+    <dimen name="fragment_travel_prep_margin_bottom">6dp</dimen>
+    <dimen name="fragment_travel_prep_padding">16dp</dimen>
 </resources>
