--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,7 +19,7 @@
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowBackground">@color/secondary_light</item>
         <item name="android:textColorPrimary">@color/primary_text</item>
-        <item name="android:textColorSecondary">@color/secondary_light</item>
+        <item name="android:textColorSecondary">@color/secondary_text</item>
         <item name="android:textAppearanceLarge">@style/Base.TextAppearance.AppCompat.Title</item>
     </style>
 
