--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,8 +19,9 @@
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowBackground">@color/secondary_light</item>
         <item name="android:textColorPrimary">@color/primary_text</item>
-        <item name="android:textColorSecondary">@color/secondary_text</item>
-        <item name="android:textAppearanceLarge">@style/Base.TextAppearance.AppCompat.Title</item>
+        <item name="android:textColorSecondary">@color/secondary_light</item>
+        <item name="android:textAppearanceLarge">@style/ExotikosLargeText</item>
+        <item name="android:textAppearanceMedium">@style/ExotikosMediumText</item>
     </style>
 
     <style name="AppThemeActionBar" parent="Theme.AppCompat.Light.DarkActionBar">
@@ -30,11 +31,15 @@
         <item name="android:actionBarStyle">@style/ExotikosActionBar</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowBackground">@color/secondary_light</item>
+        <item name="android:textAppearanceLarge">@style/ExotikosLargeText</item>
+        <item name="android:textAppearanceMedium">@style/ExotikosMediumText</item>
     </style>
 
     <style name="ExotikosActionBar" parent="Widget.AppCompat.Light.ActionBar.Solid.Inverse">
         <item name="android:background">@color/primary_dark</item>
         <item name="background">@color/primary_dark</item>
+        <item name="android:textAppearanceLarge">@style/ExotikosLargeText</item>
+        <item name="android:textAppearanceMedium">@style/ExotikosMediumText</item>
     </style>
 
     <style name="ExotikosCardHeaderBar" parent="Widget.AppCompat.Light.ActionBar.Solid.Inverse">
@@ -50,9 +55,28 @@
         <item name="android:background">@color/primary_dark</item>
         <item name="background">@color/secondary_light</item>
         <item name="colorControlNormal">@color/primary</item>
+        <item name="android:textAppearanceLarge">@style/ExotikosLargeText</item>
+        <item name="android:textAppearanceMedium">@style/ExotikosMediumText</item>
     </style>
 
+    <style name="ExotikosLargeText" parent="@android:style/TextAppearance.Large">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:typeface">sans</item>
+        <item name="android:fontFamily">sans-serif-smallcaps</item>
+    </style>
 
+    <style name="ExotikosMediumText" parent="@android:style/TextAppearance.Medium">
+        <item name="android:textSize">19sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:typeface">sans</item>
+        <item name="android:fontFamily">sans-serif-thin</item>
+    </style>
+
+    <style name="ExotikosSmallText" parent="@android:style/TextAppearance.Large">
+        <item name="android:textSize">15sp</item>
+        <item name="android:typeface">sans</item>
+    </style>
 
     <color name="primary">#00BCD4 </color>
     <color name="primary_dark">#0097A7 </color>
