--- a/app/src/main/res/layout/fragment_parent_card.xml
+++ b/app/src/main/res/layout/fragment_parent_card.xml
@@ -9,6 +9,16 @@
     android:animateLayoutChanges="true"
     style="@style/ExotikosCardHeaderBar">
 
+    <ImageView
+        android:id="@+id/ivBackground"
+        android:layout_height="100dp"
+        android:layout_width="match_parent"
+        tools:background="@android:color/black"
+        android:scaleType="centerCrop"/>
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/flight_item_background_guard">
 
     <TextView
         android:id="@+id/tvTime"
@@ -36,13 +46,16 @@
         android:layout_marginStart="@dimen/card_header_padding"
         android:layout_marginLeft="@dimen/card_header_padding"
         android:layout_marginBottom="@dimen/card_header_padding"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/flight_item_font" />
+
+</RelativeLayout>
 
     <com.github.aakira.expandablelayout.ExpandableRelativeLayout
         android:id="@+id/rlCardContents"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tvCardName"
+        android:layout_below="@+id/ivBackground"
 
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
