big button styling

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,5 @@
 
     <dimen name="fragment_travel_prep_margin_bottom">6dp</dimen>
     <dimen name="fragment_travel_prep_padding">16dp</dimen>
+    <dimen name="new_trip_top_guard">50dp</dimen>
 </resources>
