--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -58,7 +58,7 @@
         <item name="android:textAppearanceLarge">@style/ExotikosLargeText</item>
         <item name="android:textAppearanceMedium">@style/ExotikosMediumText</item>
     </style>
-
+    
     <style name="ExotikosLargeText" parent="@android:style/TextAppearance.Large">
         <item name="android:textSize">24sp</item>
         <item name="android:textStyle">normal</item>
@@ -76,6 +76,22 @@
     <style name="ExotikosSmallText" parent="@android:style/TextAppearance.Large">
         <item name="android:textSize">15sp</item>
         <item name="android:typeface">sans</item>
+    </style>
+
+    <style name="BigButton" parent="@android:style/Widget.Button">
+        <item name="android:gravity">center_vertical|center_horizontal</item>
+        <item name="android:textColor">#FFFFFFFF</item>
+        <item name="android:shadowColor">#FF000000</item>
+        <item name="android:shadowDx">0</item>
+        <item name="android:shadowDy">-1</item>
+        <item name="android:shadowRadius">0.2</item>
+        <item name="android:textSize">16dip</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:background">@drawable/big_button_bg</item>
+        <item name="android:focusable">true</item>
+        <item name="android:clickable">true</item>
+        <item name="android:layout_margin">5dp</item>
+        <item name="colorAccent">@color/primary_text</item>
     </style>
 
     <color name="primary">#00BCD4 </color>
