--- a/app/src/main/res/layout/activity_new_trip.xml
+++ b/app/src/main/res/layout/activity_new_trip.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:background="@drawable/new_trip">
+    android:background="@drawable/new_trip"
+    android:fitsSystemWindows="true">
 
     <RelativeLayout
         android:id="@+id/activity_new_trip"
@@ -13,7 +14,7 @@
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingTop="40dp"
         tools:context="com.exotikosteam.exotikos.activities.NewTripActivity">
 
         <Button
@@ -22,7 +23,6 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/new_trip_top_guard"
             android:drawableStart="@drawable/qrcode_scan"
             android:drawableLeft="@drawable/qrcode_scan"
             style="@style/BigButton"
