--- a/app/src/main/res/layout/item_flight.xml
+++ b/app/src/main/res/layout/item_flight.xml
@@ -74,18 +74,21 @@
                     android:background="@color/flight_item_background_guard"
                     android:clickable="true">
 
-                    <ImageView
-                        android:layout_width="35dp"
-                        android:layout_height="35dp"
+                    <com.makeramen.roundedimageview.RoundedImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
                         android:id="@+id/ivAirlineImage"
                         tools:src="@drawable/ic_add_24dp"
-                        app:imageUrl='@{flight.airlineIconUrl}'
+                        app:roundedImageUrl='@{flight.airlineIconUrl}'
                         android:layout_below="@+id/tvFlightDate"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
                         android:descendantFocusability="blocksDescendants"
                         android:focusable="false"
-                        android:layout_marginRight="@dimen/airline_item_padding" />
+                        android:layout_marginRight="@dimen/airline_item_padding"
+                        app:riv_mutate_background="true"
+                        app:riv_oval="true"
+                        app:riv_corner_radius="40dip"/>
 
                     <TextView
                         tools:text="January 10th, 2016"
