--- a/app/src/main/res/layout/activity_trip_list.xml
+++ b/app/src/main/res/layout/activity_trip_list.xml
@@ -38,7 +38,7 @@
         android:layout_gravity="bottom|right"
         android:layout_margin="16dp"
         app:srcCompat="@drawable/ic_add_24dp"
-        app:layout_anchor="@id/rvTrips"
+        app:layout_anchor="@+id/rvTrips"
         app:layout_anchorGravity="bottom|right|end" />
 
 </android.support.design.widget.CoordinatorLayout>
