--- a/app/src/main/res/layout/fragment_boarding_main.xml
+++ b/app/src/main/res/layout/fragment_boarding_main.xml
@@ -3,8 +3,7 @@
     <RelativeLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
 
         <TextView
             tools:text="A54"
