--- a/app/src/main/res/layout/fragment_parent_card.xml
+++ b/app/src/main/res/layout/fragment_parent_card.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -77,3 +78,4 @@
 
     </com.github.aakira.expandablelayout.ExpandableRelativeLayout>
 </RelativeLayout>
+</layout>
